<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tit_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.example.dell.uidemotest1.view.TitleLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp" />

    <LinearLayout
        android:background="#fff"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="#fff"
            android:orientation="horizontal">

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/corners_bg"
                android:queryHint="@string/hint_search" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/tab_border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_write"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/write"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_diary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/diary"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_create"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/create"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_join"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/join"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#4cd3ef" />

        <android.support.v4.view.ViewPager
            android:id="@+id/mainViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#fff" />
    </LinearLayout>
</LinearLayout>