<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tit_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".CommentActivity">

    <include
        android:id="@+id/comment_title"
        layout="@layout/comment_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment_title"
        android:background="#fff"
        android:padding="10dp">

        <ScrollView
            android:scrollbars="none"
            android:id="@+id/comment_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/news_tit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_tit_test"
                    android:textColor="#000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:id="@+id/user_img"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/user_img" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/user_img"
                        android:gravity="center"
                        android:text="@string/user_name_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/send_time"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:gravity="center"
                        android:text="2018-5-13"
                        android:textSize="18sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/news_img"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/img" />

                <TextView
                    android:id="@+id/news_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bottom_border"
                    android:lineSpacingMultiplier="1.2"
                    android:paddingBottom="10dp"
                    android:text="@string/news_content_test"
                    android:textSize="18sp" />

                <LinearLayout
                    android:background="@drawable/bottom_border"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/news_class"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="@string/news_class_text"
                        android:textColor="#000"
                        android:textSize="19sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/class_border"
                        android:gravity="center"
                        android:text="liunx"
                        android:textColor="#73dee9"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/class_border"
                        android:gravity="center"
                        android:text="css"
                        android:textColor="#73dee9"
                        android:textSize="18sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_speak_text"
                            android:textColor="#000"
                            android:textSize="17sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/slip"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/slip"
                            android:textColor="#73dee9"
                            android:textSize="19sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/slip"
                            android:text="@string/ok_speak_text"
                            android:textColor="#000"
                            android:textSize="17sp"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/check_text"
                            android:textSize="17sp" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="22dp"
                            android:background="@drawable/check" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#f6f6f6"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20sp"
                        android:layout_toLeftOf="@+id/pai_class"
                        android:gravity="top"
                        android:text="按时间排序"
                        android:textSize="17sp" />

                    <ImageButton
                        android:id="@+id/pai_class"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/more" />
                </RelativeLayout>

                <com.example.dell.uidemotest1.view.ScrollViewWithListView
                    android:id="@+id/comment_item_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true" />

                <LinearLayout
                    android:id="@+id/comment_tit2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/comment_item_view">

                    <ImageView
                        android:id="@+id/comment_img2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/comment_img1" />

                    <TextView
                        android:background="@drawable/bottom_border"
                        android:id="@+id/comment_name2"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="徐静蕾"
                        android:textColor="#000"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:id="@+id/comment_send"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_below="@+id/comment_tit2"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#f3f3f3"
                        android:hint="请输入你的评论"
                        android:paddingLeft="20dp" />

                    <Button

                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/btn_selector"
                        android:text="发送"
                        android:textColor="#a9a7a7"
                        android:textSize="18dp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>